--- a/cssprincipal.css
+++ b/cssprincipal.css
@@ -1,126 +1,112 @@
 body{
-    display:flex;
-    margin:0;
-    padding:0;
-    min-height: 100vh;
-    background: #444;
-    justify-content: center;
-    align-items: center;
-    font-family: arial;
-    background-image: url("img/caracademia2.JPG");
-    background-size: cover;
-  }
-  
-  .container{
-    width: 1000px;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap:wrap;
-    
-    
-  }
-  
-  .container .card{
-    position: relative;
-  }
-  
-  .container .card .face{
-    width:300px;
-    height: 200px;
-    transition:.4s;
-    
-  }
-  
-  .container .card .face.face1{
-    position: relative;
-    background: #333;
-    display: flex;
-    justify-content: center;
-    align-content:center;
-    align-items: center;
-    z-index: 1;
-    transform: translateY(100px);
-  }
-  
-  .container .card:hover .face.face1{
-    transform: translateY(0);
-    box-shadow:
-      inset 0 0 60px whitesmoke,
-      inset 20px 0 80px rgb(9, 84, 5),
-      inset -20px 0 80px rgb(11, 14, 175),
-      inset 20px 0 300px rgb(150, 11, 11),
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("img/caracademias.JPG");
+  background-size: cover;
+}
 
-     
-  }
-  
-  
-  .container .card .face.face1 .content{
-    opacity: .2;
-    transition:  0.5s;
-    text-align: center;
-  }
-  
-  .container .card:hover .face.face1 .content{
-    opacity: 1;
-   
-  }
-  
-  .container .card .face.face1 .content i{
-    font-size: 3em;
-    color: white;
-    display: inline-block;
-     
-  }
-  
-  .container .card .face.face1 .content h3{
-    font-size: 1em;
-    color: white;
-    text-align: center;
-    
-  
-  }
-  
-  .container .card .face.face1 .content a{
-     transition: .5s;
-  }
-  
-  .container .card .face.face2{
-     position: relative;
-     background: whitesmoke;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     padding: 20px;
-    box-sizing: border-box;
-    box-shadow: 0 20px 50px rgba(0,0,0,.8);
-    transform: translateY(-100px);
-  }
-  
-  .container .card:hover .face.face2{
-      transform: translateY(0);
-  }
-  
-  .container .card .face.face2 .content p, a{
-    font-size: 10pt;
-    margin: 0 ;
-    padding: 0;
-    color:#333;
-  }
-  
-  .container .card .face.face2 .content a{
-    text-decoration:none;
-    color: black;
-    box-sizing: border-box;
-    outline : 1px dashed #d81d1d;
-    padding: 10px;
-    margin: 15px 0 0;
-    display: inline-block;
-  }
-  
-  .container .card .face.face2 .content a:hover{
-    background: #333 ;
-    color: whitesmoke; 
-    box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
-  }
-  
+.container{
+  width: 5000px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+.container2{
+  width: 5000px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container .card{
+  position: relative;
+  cursor: pointer;
+
+}
+
+.container .card .face{
+  width: 300px;
+  height: 200px;
+  transition: 0.2s;
+
+}
+
+.container .card .face.face1{
+  position: relative;
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+}
+
+.container .card:hover .face.face1{
+  background: #231bbb;
+  transform: translateY(0);
+}
+
+.container .card .face.face1 .content{
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content{
+  opacity: 1;
+}
+
+.container .card .face.face1 .content img{
+  max-width: 220px;
+}
+
+.container .card .face.face1 .content h3{
+  margin: 2px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+
+}
+
+.container .card .face.face2{
+  position: relative;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2{
+  transform: translateY(0);
+}
+
+.container .card .face.face2 .content p{
+  margin: 0;
+  padding: 0;
+}
+
+.container .card .face.face2 .content a{
+  margin: 1px 0 0;
+  display:  inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 1px;
+  border: 1px solid #333;
+}
+
+.container .card .face.face2 .content a:hover{
+  background: #333;
+  color: #fff;
+}
+
+
